--- a/css/style.css
+++ b/css/style.css
@@ -52,63 +52,19 @@ table {
 }
 
 body {
-  background-color: #E7E7E7;
+  background-color: #FFFFFF;
   font-family: sans-serif;
-  font-size: 10px;
-}
-
-.container {
-  margin: 0 auto;
-  width: 480px;
-  height: 500px;
+  width: 400px;
   overflow: scroll;
 }
 
 nav {
   margin: 0 auto;
-  padding: 15px 0 15px 0;
+  padding:20px;
   position: fixed;
-  width: 480px;
+  width: 400px;
 	background-color: #FFFFFF;
-	height: 45px;
-}
-
-.arrow {
-  float: left;
-  width: 5%;
-	padding-bottom: 3%;
-	padding-top: 5px;
-	padding-left: 3%;
-  color: #000000;
-}
-
-.info {
-	padding-top: 45px;
-  display:inline-block;
-}
-
-.line {
-	padding: 3%;
-	width: 100%;
-  float:left;
-	background-color: #FFFFFF;
-  display: inline-block;
-}
-
-.direction {
-	padding: 3%;
-	width: 100%;
-  float:center;
-	background-color: #FFFFFF;
-  display: inline-block;
-}
-
-.frequency {
-  padding: 3%;
-	width: 100%;
-  float:right;
-	background-color: #FFFFFF;
-  display: inline-block;
+	height: 55px;
 }
 
 h1 {
@@ -116,7 +72,7 @@ h1 {
   font-size: 24px;
   font-weight: lighter;
   text-align: center;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
 }
 
 h2 {
@@ -126,15 +82,29 @@ h2 {
   text-transform: uppercase;
   color: #00abff;
   line-height: 18px;
-  padding-top: 10px;
+  padding-top: 60px;
   padding-bottom: 3px;
+  padding-left: 15px;
   border-bottom: .5px solid #313030;
 }
 
-h3 {
+h3, h4, h5 {
   font-family: Gotham, sans-serif;
-	font-weight: lighter;
-	font-size: 20px;
-	color: black;
-	line-height: 30px;
+  font-weight: lighter;
+  font-size: 16px;
+  color: black;
+  line-height: 22px;
+}
+
+h3 {
+  float:left;
+  padding-left: 15px;
+}
+
+h4 {
+  text-align: center;
+}
+
+h5 {
+  float: right;
 }
